--- a/dashboard.html
+++ b/dashboard.html
@@ -23,9 +23,10 @@ function goToTasks() {
 
 function logout() {
     localStorage.removeItem("username");
-    window.location.href = "login.html";
+    window.location.href = "index.html";
 }
 </script>
 
 </body>
+
 </html>
