Fix image source and improve HTML formatting
Updated image source path and cleaned up HTML structure.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="container">
-    <img src="C:\Users\Admin\OneDrive\Pictures\popimgs\hyoukabanner-3035652650.jpg" height="175" width="450">
+    <img src="hyoukabanner.jpg" height="175" width="450">
     <h2>Login</h2>
     <input type="text" id="username" placeholder="Enter your name">
     <button onclick="login()">Login</button>
@@ -32,3 +32,4 @@ function login() {
 
 </body>
 </html>
+
