--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="container">
-    <img src="image\hyoukabanner.jpg" alt=image height="175" width="450">
+    <img src="hyoukabanner.jpg" alt=image height="175" width="450">
     <h2>Login</h2>
     <input type="text" id="username" placeholder="Enter your name">
     <button onclick="login()">Login</button>
@@ -32,5 +32,6 @@ function login() {
 
 </body>
 </html>
+
 
 
